Ajustando algumas informações do projeto

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
             contenteditable="true"
           ></div>
         </div>
+
+        <div>
+          <span class="version">Versão 1.0.0</span>
+          <span class="version">Desenvolvido por Matheus Meneses Messias</span>
+          <span class="version"
+            >Projeto criado durante o evento da Rocketseat</span
+          >
+        </div>
       </main>
     </div>
     <script src="script.js"></script>
